--- a/productos/static/productos/css/main.css
+++ b/productos/static/productos/css/main.css
@@ -537,7 +537,7 @@ iframe {
 ===========================================================*/
 .topbar {
   height: 45px;
-  background-color: #f5f5f5;
+  background-color: #A47003;
   position: relative;
   display: -webkit-box;
   display: -webkit-flex;
@@ -628,8 +628,8 @@ iframe {
 .logo {
   display: block;
   position: absolute;
-  left: 52px;
-  top: 50%;
+  left: 160px;
+  top: 100%;
   -webkit-transform: translateY(-50%);
   -moz-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
@@ -638,7 +638,7 @@ iframe {
 }
 
 .logo img {
-  max-height: 27px;
+  max-height: 100px;
 }
 
 
@@ -971,7 +971,7 @@ li.sale-noti > a {
   padding-left: 20px;
   padding-top: 10px;
   padding-bottom: 10px;
-  background-color: white;
+  background-color: #A47003;
   display: none;
 }
 
@@ -1209,7 +1209,7 @@ li.sale-noti > a {
   z-index: 1200;
   top: 0;
   left: 0;
-  background-color: #fff;
+  background-color: #A47003;
   width: 320px;
   height: 100vh;
   border-right: 1px solid #e5e5e7;
