--- a/productos/static/productos/css/util.css
+++ b/productos/static/productos/css/util.css
@@ -3713,7 +3713,7 @@ SHAPE SHAPE SHAPE SHAPE SHAPE SHAPE SHAPE SHAPE SHAPE SHAPE
 .bg3 {background-color: rgba(255,255,255,0.95);}
 .bg4 {background-color: #111111;}
 .bg5 {background-color: #f2f2f2;}
-.bg6 {background-color: #f0f0f0;}
+.bg6 {background-color: #000;}
 .bg7 {background-color: #333333;}
 .bg8 {background-color: #e6e6e6;}
 
