--- a/productos/templates/productos/contact.html
+++ b/productos/templates/productos/contact.html
@@ -1,7 +1,75 @@
 {% extends "productos/base.html" %}
 {% load static %}
+{% block correo %} 
+	{% if request.user.is_authenticated %}
+		<p>
+			<a href="#">{{ email }}</a>
+		</p> 
+		<h8><a href="{% url 'cerrar' %}">Cerrar sesion</a></h8>
+	{% endif %}
+{% endblock %}
+{% block emailMovil %} 
+	{% if request.user.is_authenticated %}
+		<p>
+			<a href="#">{{ cliente.client.email }}</a>
+		</p> 
+		<h8><a href="{% url 'cerrar' %}">Cerrar sesion</a></h8>
+	{% endif %}
+{% endblock %}
+{% block numCart %}
+	<span class="header-icons-noti">{{num_product}}</span>
+{% endblock %}
+{% block cart %}
+	<ul class="header-cart-wrapitem">
+		{% for detail in details %}
+			<li class="header-cart-item">
+				<div class="header-cart-item-img">
+					<img src="{{ detail.Product.image.url }}" alt="IMG">
+				</div>
 
+				<div class="header-cart-item-txt">
+					<a href="#" class="header-cart-item-name">
+						{{ detail.Product.description }}
+					</a>
+
+					<span class="header-cart-item-info">
+						{{ detail.quantity }} x ${{ detail.Product.price }}
+					</span>
+				</div>
+			</li>
+		{% endfor %}
+	</ul>			
+{% endblock %}
+{% block numbCartMovil %}
+	<span class="header-icons-noti">{{num_product}}</span>
+{% endblock %}
+{% block cartMovil %}
+	<ul class="header-cart-wrapitem">
+		{% for detail in details %}
+			<li class="header-cart-item">
+				<div class="header-cart-item-img">
+					<img src="{{ detail.Product.image.url }}" alt="IMG">
+				</div>
+
+				<div class="header-cart-item-txt">
+					<a href="#" class="header-cart-item-name">
+						{{ detail.Product.description }}
+					</a>
+
+					<span class="header-cart-item-info">
+						{{ detail.quantity }} x ${{ detail.Product.price }}
+					</span>
+				</div>
+			</li>
+		{% endfor %}
+	</ul>		
+{% endblock %}
 {% block Cuerpo %}
+	<section class="bg-title-page p-t-50 p-b-40 flex-col-c-m" style="background-image: url({% static 'productos/images/descarga.jpg' %});">
+		<h2 class="l-text2 t-center">
+			Herramientas para todo!.
+		</h2>
+	</section>
 	<section class="bgwhite p-t-66 p-b-60">
 		<div class="container">
 			<div class="row">
