Se adapta y se agrega el sitio de administracion

--- a/productos/templates/productos/base.html
+++ b/productos/templates/productos/base.html
@@ -107,7 +107,7 @@
 								<div class="header-cart-buttons">
 									<div class="header-cart-wrapbtn">
 										<!-- Button -->
-										<a href="#" class="flex-c-m size1 bg1 bo-rad-20 hov1 s-text1 trans-0-4">
+										<a href="{% url 'login' %}" class="flex-c-m size1 bg1 bo-rad-20 hov1 s-text1 trans-0-4">
 											Iniciar 
 										</a>
 									</div>
@@ -177,7 +177,7 @@
 								<div class="header-cart-buttons">
 									<div class="header-cart-wrapbtn">
 										<!-- Button -->
-										<a href="#" class="flex-c-m size1 bg1 bo-rad-20 hov1 s-text1 trans-0-4">
+										<a href="{% url 'login' %}" class="flex-c-m size1 bg1 bo-rad-20 hov1 s-text1 trans-0-4">
 											Iniciar 
 										</a>
 									</div>
